add global style

--- a/Clone_DisneyPlus/project/index.html
+++ b/Clone_DisneyPlus/project/index.html
@@ -9,15 +9,9 @@
 
 </head>
 <body>
-     <h1>Disney Plus</h1>
-     <p>Acesse</p>
-     <i class="fa-solid fa-house"></i>
-     <i class="fa-solid fa-magnifying-glass"></i>
-     <i class="fa-solid fa-plus"></i>
-     <i class="fa-solid fa-start"></i>
-     <i class="fa-solid fa-film"></i>
-     <i class="fa-solid fa-tv"></i>
-     <i class="fa-solid fa-ellipsis-vertical"></i>
+     <div class="background-fixed"></div>
+     <div class="wrapper"></div>
+
 
 </body>
 </html>
