add logo no header

--- a/Clone_DisneyPlus/project/index.html
+++ b/Clone_DisneyPlus/project/index.html
@@ -4,14 +4,18 @@
      <meta charset="UTF-8">
      <meta http-equiv="X-UA-Compatible" content="IE=edge">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <link rel="stylesheet" href="../project/assets/css/style.css">
+      <link rel="stylesheet" href="/assets/css/style.css">
      <title>Disney Plus</title>
 
 </head>
 <body>
      <div class="background-fixed"></div>
      <div class="wrapper"></div>
-
+     <header class="header">
+          <div class="logo">
+               <a href="/" class="logo__link"></a>
+          </div>
+     </header>
 
 </body>
 </html>
