--- a/Clone_DisneyPlus/project/index.html
+++ b/Clone_DisneyPlus/project/index.html
@@ -2,20 +2,67 @@
 <html lang="pt-br">
 <head>
      <meta charset="UTF-8">
-     <meta http-equiv="X-UA-Compatible" content="IE=edge">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <link rel="stylesheet" href="/assets/css/style.css">
+      <link rel="stylesheet" href="./assets/css/style.css"/>
      <title>Disney Plus</title>
 
 </head>
 <body>
-     <div class="background-fixed"></div>
-     <div class="wrapper"></div>
-     <header class="header">
-          <div class="logo">
-               <a href="/" class="logo__link"></a>
-          </div>
-     </header>
+     <div class="background-fixed">
+     </div>
 
+     <div class="wrapper">
+          <header class="header">
+               <div class="logo">
+                    <a class="logo__link" href="/" ></a>
+               </div>
+               <nav class="header__navigation">
+                    <ul class="nav-menu">
+                         <li class="nav-menu__item">
+                              <a href="/" class="nav-menu__link">
+                                   <i class="fa-solid fa-house"></i>
+                                   <span class="nav-menu__text">INICIO</span>
+                              </a>
+                         </li>
+                         <li class="nav-menu__item">
+                              <a href="/" class="nav-menu__link">
+                                   <i class="fa-solid fa-magnifying-glass"></i>
+                                   <span class="nav-menu__text">PESQUISA</span>
+                              </a>
+                         </li>
+                         <li class="nav-menu__item">
+                              <a href="/" class="nav-menu__link">
+                                   <i class="fa-solid fa-plus"></i>
+                                   <span class="nav-menu__text">MINHA LISTA</span>
+                              </a>
+                         </li>
+                         <li class="nav-menu__item mobile-hidden">
+                              <a href="/" class="nav-menu__link">
+                                   <i class="fa-solid fa-star"></i>
+                                   <span class="nav-menu__text">ORIGINAIS</span>
+                              </a>
+                         </li>
+                         <li class="nav-menu__item mobile-hidden">
+                              <a href="/" class="nav-menu__link">
+                                   <i class="fa-solid fa-film"></i>
+                                   <span class="nav-menu__text">FILMES</span>
+                              </a>
+                         </li>
+                         <li class="nav-menu__item mobile-hidden">
+                              <a href="/" class="nav-menu__link">
+                                   <i class="fa-solid fa-tv"></i>
+                                   <span class="nav-menu__text">SERIES</span>
+                              </a>
+                         </li>
+                         <li class="nav-menu__item dropdown">
+                              <a href="/" class="nav-menu__link">
+                                   <i class="fa-solid fa-ellipsis-vertical"></i>                            
+                              </a>
+                         </li>
+                     
+                    </ul>
+               </nav>
+          </header>
+     </div>  
 </body>
 </html>
