--- a/Clone_DisneyPlus/project/index.html
+++ b/Clone_DisneyPlus/project/index.html
@@ -78,9 +78,57 @@
                                         </a>
                                    </li>
                               </ul>
-                         </li>
-                     
+                         </li>                     
                     </ul>
+                    <div class="user-menu">
+                         <div class="user-menu__background  show-hover"></div>
+                         <div class="user-menu__current-profile">
+                              <div class="user-profile user-profile--reverse">
+                                   <img src="./assets/imgs/avatarmaria2 (1).jpg" alt="" class="user-profile__avatar">
+                                   <span class="user-profile__title">Maria Romualdo</span>
+                              </div>
+                         </div>
+                         <ul class="user-menu__profiles show-hover">
+                              <li class="user-menu__item">
+                                   <div class="user-profile user-profile">
+                                        <img src="./assets/imgs/avatarmaria2 (1).jpg" alt="" class="user-profile__avatar">
+                                        <span class="user-profile__title">Raynne</span>
+                                   </div>
+
+                                   <div class="user-profile user-profile">
+                                        <img src="./assets/imgs/avatarmaria2 (1).jpg" alt="" class="user-profile__avatar">
+                                        <span class="user-profile__title">Jorge</span>
+                                   </div>
+
+                                   <div class="user-profile user-profile">
+                                        <img src="./assets/imgs/avatarmaria2 (1).jpg" alt="" class="user-profile__avatar">
+                                        <span class="user-profile__title">Urania</span>
+                                   </div>
+
+                                   <div class="user-profile user-profile">
+                                        <img src="./assets/imgs/avatarmaria2 (1).jpg" alt="" class="user-profile__avatar">
+                                        <span class="user-profile__title">Cloe</span>
+                                   </div>
+                              </li>
+                         </ul>
+                         <ul class="user-menu__options">
+                              <li class="user-menu__item">
+                                   <a href="/" class="user-menu__link">Editar Perfirs</a>
+                              </li>
+                              <li class="user-menu__item">
+                                   <a href="/" class="user-menu__link">Configurações do Aplicativo</a>
+                              </li>
+                              <li class="user-menu__item">
+                                   <a href="/" class="user-menu__link">Conta</a>
+                              </li>
+                              <li class="user-menu__item">
+                                   <a href="/" class="user-menu__link">Ajuda</a>
+                              </li>
+                              <li class="user-menu__item">
+                                   <a href="/" class="user-menu__link">Sair</a>
+                              </li>
+                         </ul>
+                    </div>
                </nav>
           </header>
      </div>  
