--- a/Clone_DisneyPlus/project/index.html
+++ b/Clone_DisneyPlus/project/index.html
@@ -113,7 +113,7 @@
                          </ul>
                          <ul class="user-menu__options">
                               <li class="user-menu__item">
-                                   <a href="/" class="user-menu__link">Editar Perfirs</a>
+                                   <a href="/" class="user-menu__link">Editar Perfil</a>
                               </li>
                               <li class="user-menu__item">
                                    <a href="/" class="user-menu__link">Configurações do Aplicativo</a>
