create collection section

--- a/Clone_DisneyPlus/project/index.html
+++ b/Clone_DisneyPlus/project/index.html
@@ -208,38 +208,115 @@
 
           <section class="categories">
                <ul class="category-menu" >
+
+
+                
+                 <li class="category-menu__item">
+
+                         <video class="category-menu__video" src="./assets/videos/category-disney.mp4" autoplay loop muted></video>
+
+                         <a class="category-menu__link"  href="/">
+
+                              <img class="category-menu__img"  src="./assets/imgs/categories/disney.png" alt="Disney logo" />
+                         </a>
+                    </li>
+
+                  <li class="category-menu__item">
+                         <video class="category-menu__video" src="./assets/videos/category-pixar.mp4" autoplay loop muted></video>
+
+                         <a  class="category-menu__link" href="/" >
+                              <img  class="category-menu__img"  src="./assets/imgs/categories/pixar.png" alt="Pixar logo" >
+                         </a>
+                    </li>
+
+                  <li class="category-menu__item">
+                         <video class="category-menu__video" src="./assets/videos/category-marvel.mp4" autoplay loop muted></video>
+
+                         <a  class="category-menu__link" href="/">
+                              <img class="category-menu__img"  src="./assets/imgs/categories/marvel.png" alt="Marvel  logo" >
+                         </a>
+                    </li>
+
                     <li class="category-menu__item">
-                         <video class="category-menu__video" src="./assets/video/category-disney.mp4" autoplay loop muted></video>
-                         <a href="/" class="category__link">
-                              <img src="./assets/imgs/categories/disney.png" alt="Disney logo" class="category-menu__img">
+                         <video class="category-menu__video" src="./assets/videos/category-star-wars.mp4" autoplay loop muted></video>
+                         <a href="/" class="category-menu__link">
+                              <img class="category-menu__img" src="./assets/imgs/categories/star-wars.png" alt="Star Wars logo" >
                          </a>
                     </li>
                     <li class="category-menu__item">
-                         <video class="category-menu__video" src="./assets/video/category-pixar.mp4" autoplay loop muted></video>
-                         <a href="/" class="category__link">
-                              <img src="./assets/imgs/categories/pixar.png" alt="Disney logo" class="category-menu__img">
-                         </a>
-                    </li>
-                    <li class="category-menu__item">
-                         <video class="category-menu__video" src="./assets/video/category-marvel.mp4" autoplay loop muted></video>
-                         <a href="/" class="category__link">
-                              <img src="./assets/imgs/categories/marvel.png" alt="Disney logo" class="category-menu__img">
-                         </a>
-                    </li>
-                    <li class="category-menu__item">
-                         <video class="category-menu__video" src="./assets/video/category-star-wars.mp4" autoplay loop muted></video>
-                         <a href="/" class="category__link">
-                              <img src="./assets/imgs/categories/star-wars.png" alt="Disney logo" class="category-menu__img">
-                         </a>
-                    </li>
-                    <li class="category-menu__item">
-                         <video class="category-menu__video" src="./assets/video/category-national-geographic.mp4" autoplay loop muted></video>
-                         <a href="/" class="category__link">
-                              <img class="category-menu__img" src="./assets/imgs/categories/national-geographic.png" alt="Disney logo">
+                         <video class="category-menu__video" src="./assets/videos/category-national-geographic.mp4" autoplay loop muted></video>
+                         <a class="category-menu__link" href="/" >
+                              <img class="category-menu__img" src="./assets/imgs/categories/national-geographic.png" alt="National Gegrafic logo">
                          </a>
                     </li>
                </ul>
           </section>
+
+          <section class="collections">
+               <div class="collection">
+                    <h3 class="collection__title">Recomendado para Você</h3>
+                    <div class="movie-carousel">
+                         <button class="arrow-slider  arrow-slider--left" data-carousel ="btn-previous"></button>
+
+                         <button class="arrow-slider  arrow-slider--right" data-carousel="btn-next"></button>
+
+                         <ul class="movie-carousel__list">
+                              <li class="movie-carousel__item">
+                                   <a href="/" class="movie-carousel__link">
+                                        <img src="./assets/imgs/exemple/movie-exemple.jpeg" alt="Capa do filme Movie Example " class="movie-carousel__cover">
+                                   </a>
+                              </li>
+                              <li class="movie-carousel__item">
+                                   <a href="/" class="movie-carousel__link">
+                                        <img src="./assets/imgs/exemple/movie-exemple.jpeg" alt="Capa do filme Movie Example " class="movie-carousel__cover">
+                                   </a>
+                              </li>
+                              <li class="movie-carousel__item">
+                                   <a href="/" class="movie-carousel__link">
+                                        <img src="./assets/imgs/exemple/movie-exemple.jpeg" alt="Capa do filme Movie Example " class="movie-carousel__cover">
+                                   </a>
+                              </li>
+                              <li class="movie-carousel__item">
+                                   <a href="/" class="movie-carousel__link">
+                                        <img src="./assets/imgs/exemple/movie-exemple.jpeg" alt="Capa do filme Movie Example " class="movie-carousel__cover">
+                                   </a>
+                              </li>
+                              <li class="movie-carousel__item">
+                                   <a href="/" class="movie-carousel__link">
+                                        <img src="./assets/imgs/exemple/movie-exemple.jpeg" alt="Capa do filme Movie Example " class="movie-carousel__cover">
+                                   </a>
+                              </li>
+                              <li class="movie-carousel__item">
+                                   <a href="/" class="movie-carousel__link">
+                                        <img src="./assets/imgs/exemple/movie-exemple.jpeg" alt="Capa do filme Movie Example " class="movie-carousel__cover">
+                                   </a>
+                              </li>
+                              <li class="movie-carousel__item">
+                                   <a href="/" class="movie-carousel__link">
+                                        <img src="./assets/imgs/exemple/movie-exemple.jpeg" alt="Capa do filme Movie Example " class="movie-carousel__cover">
+                                   </a>
+                              </li>
+                              <li class="movie-carousel__item">
+                                   <a href="/" class="movie-carousel__link">
+                                        <img src="./assets/imgs/exemple/movie-exemple.jpeg" alt="Capa do filme Movie Example " class="movie-carousel__cover">
+                                   </a>
+                              </li>
+                              <li class="movie-carousel__item">
+                                   <a href="/" class="movie-carousel__link">
+                                        <img src="./assets/imgs/exemple/movie-exemple.jpeg" alt="Capa do filme Movie Example " class="movie-carousel__cover">
+                                   </a>
+                              </li>
+                              <li class="movie-carousel__item">
+                                   <a href="/" class="movie-carousel__link">
+                                        <img src="./assets/imgs/exemple/movie-exemple.jpeg" alt="Capa do filme Movie Example " class="movie-carousel__cover">
+                                   </a>
+                              </li>
+                    
+                         </ul>
+                    </div>
+               </div>
+          </section>
+
      </main>
 </div>  
      <script type="module"  src="./assets/js/main.js"></script>
