fix collection section and adjust for mobile resolution

--- a/Clone_DisneyPlus/project/index.html
+++ b/Clone_DisneyPlus/project/index.html
@@ -8,8 +8,7 @@
 
 </head>
 <body>
-     <div class="background-fixed">
-     </div>
+     <div class="background-fixed"></div>
 
      <div class="wrapper">
           <header class="header" data-header>
@@ -403,6 +402,6 @@
 
      </main>
 </div>  
-     <script type="module"  src="./assets/js/main.js"></script>
+  <script src="./assets/js/main.js"></script>
 </body>
 </html>
